# micromamba-testing

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/my_package/: __init__.py  utils.py
src/my_package/static/: example.txt
